Ajusta base no vite.config e corrige deploy

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "threejs_portifolio",
-  "homepage": "https://Rodrigo-Batista-Filho.github.io/Rodrigo-Filho_Portifolio/",
+  "homepage": "https://rodrigo-batista-filho.github.io/Rodrigo-Filho_Portifolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
